# AppUninstaller

./: .gitignore  Cargo.toml  README.md
.github/workflows/: 0.yml
src/: desktop.rs  dialog.rs  error.rs  main.rs  preferences.rs  purge.rs  utils.rs
ui/: style.css  window.xml
