[package]
name    = "LinuxAppUninstaller"
version = "0.2.0"
edition = "2021"
description = "A utility for uninstalling applications on Linux"
repository = "https://github.com/tseli0s/AppUninstaller"
license = "GPL-3.0-only"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
freedesktop-desktop-entry = "0.7"
log = "0.4"
env_logger = "0.11"
which = "7.0"
thiserror = "2.0"
open = "5"
confy = "0.6"
serde = { version = "1.0", features = [ "serde_derive" ] }
rayon = "1.10"

[profile.release]
lto = "fat"
strip = "symbols"
panic = "abort"